prepare for release

--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,45 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.580.1</version>
+        <version>2.19</version>
     </parent>
 
+    <groupId>com.agfa.jenkins.plugins</groupId>
     <artifactId>require-interactive</artifactId>
     <packaging>hpi</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>require-interactive</name>
+    <url>http://wikihealthcare.agfa.net/display/JEN/Require+Interactive</url>
 
+	<scm>
+		<connection>scm:git:git@github.com:huybrechts/require-interactive.git</connection>
+		<developerConnection>scm:git:git@github.com:huybrechts/require-interactive.git</developerConnection>
+		<url>https://github.com/huybrechts/require-interactive</url>
+	</scm>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <findbugs.failOnError>false</findbugs.failOnError>
+        <java.level>8</java.level>
+    </properties>
+
+    <build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.4</version>
+			</extension>
+		</extensions>
+	</build>
+
+  <distributionManagement>
+    <repository>
+      <id>hap-repository</id>
+      <name>HAP Maven Repository</name>
+      <url>scp://maven-repository.agfahealthcare.com/maven-repository</url>
+      <uniqueVersion>true</uniqueVersion>
+    </repository>
+  </distributionManagement>
+    
 </project>
