--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.agfa.jenkins.plugins</groupId>
     <artifactId>require-interactive</artifactId>
     <packaging>hpi</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>require-interactive</name>
     <url>http://wikihealthcare.agfa.net/display/JEN/Require+Interactive</url>
 
@@ -18,7 +18,8 @@
 		<connection>scm:git:git@github.com:huybrechts/require-interactive.git</connection>
 		<developerConnection>scm:git:git@github.com:huybrechts/require-interactive.git</developerConnection>
 		<url>https://github.com/huybrechts/require-interactive</url>
-	</scm>
+	  <tag>require-interactive-1.1</tag>
+  </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
